<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/gross_income"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/question_1"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/bt_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_bt_low"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/bt_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_bt_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/bt_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_bt_high"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/rni"
                android:layout_width="315dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:text="@string/question_2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_calculate"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/calculate" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/net_income"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>